# agentfeeds

./: CHANGELOG.md  README.md  SKILL.md  SPEC.md  pyproject.toml
agentfeeds/: __main__.py  cli.py  commands.py  constants.py  fetch.py  fetcher.py  polling_install.py  polling_uninstall.py
agentfeeds/adapters/: __init__.py  common.py  http.py  ical.py  local_command.py  local_file.py  rss.py
agentfeeds/polling/: __init__.py
agents/: openai.yaml
authenticated-feed-sources/: SKILL.md
bundle/: SKILL.md
bundle/recipes/: discover.md  refresh.md  subscribe.md  unsubscribe.md
catalog/: INDEX.json
catalog/schemas/: envelope.v0.3.json  stream-definition.v0.3.json
catalog/schemas/event-types/: finance.exchange-rate.v1.json  geo.earthquake.v1.json  github.notification.v1.json  github.pull-request.v1.json  github.release.v1.json  ical-event.v1.json  linear.issue.v1.json  local.command.v1.json  local.directory-entry.v1.json  local.file.v1.json  local.git-status.v1.json  local.markdown-document.v1.json  mac.imessage-thread.v1.json  mac.mail-message.v1.json  mac.note.v1.json  mac.reading-list-item.v1.json  mac.reminder.v1.json  notion.page.v1.json  rss-item.v1.json  space.iss-location.v1.json  todoist.task.v1.json  weather.forecast.v1.json  weather.observation.v1.json
catalog/streams/calendar/: ics.yaml
catalog/streams/dev/: github-issues.yaml  github-notifications.yaml  github-prs-mine.yaml  github-prs.yaml  github-releases.yaml  hackernews-frontpage.yaml
catalog/streams/finance/: exchangerate.yaml
catalog/streams/local/: directory-recent.yaml  (+3 more)
docs/: DEMO.md  PRODUCT_SPEC.md  REGISTRY_SUBMISSION.md  SHARING.md  SPEC.md  render_demo_gif.py
evals/: evals.json
evals/files/: project-notes.md
references/: background-refresh.md  macos-personal-sources.md  publishing.md  runtime-setup.md  template-authoring.md
scripts/: agentfeeds.py  agentfeeds_fetch.py  build-index.py  render_demo_gif.py  setup.py  validate-stream.py
scripts/bundle/: build_skill_bundle.py
scripts/evals/: run_evals.py
scripts/macos/: calendar_today.py  mail_inbox_recent.py  reminders_open.py
scripts/polling/: install.py  uninstall.py
tests/: conftest.py  test_adapters.py  test_catalog_validity.py  test_cli.py  test_fetcher.py  test_hermes_plugin.py  test_host_agnostic_skill.py
(+44 files in other folders)
