[project]
name = "agentfeeds"
version = "0.0.0"
description = "Local file-based ambient data feeds for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "feedparser>=6.0.11",
  "icalendar>=5.0.13",
  "jmespath>=1.0.1",
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.3",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
