[project]
name = "agentfeeds"
version = "0.1.0"
description = "Local-first ambient context streams for Hermes and personal agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "feedparser>=6.0.11",
  "icalendar>=5.0.13",
  "jmespath>=1.0.1",
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.3",
]

[project.scripts]
agentfeeds = "agentfeeds.cli:main"
agentfeeds-fetch = "agentfeeds.fetch:main"
agentfeeds-install-poll = "agentfeeds.polling_install:main"
agentfeeds-uninstall-poll = "agentfeeds.polling_uninstall:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentfeeds*"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
